--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
 
-
-    <script src="js/controllers/ctrl1.js"></script>
+    <script src="js/controllers/logincontroller.js"></script>
     <script src="js/controllers/ctrl2.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/client.js"></script>
+
+    <script src="js/factories/fb.js"></script>
 </head>
 <body ng-app="sampleApp" ng-controller="Controller2">
 
