--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>KatchUpp</title>
     <base href="/view1">
+
+    <link rel="stylesheet" href="css/main.css">
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
 
