added an example factory module and use it in the login Controller

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     <script src="components/view2/ctrl2.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/client.js"></script>
-
+    <script src="factories/testfactory.js"></script>
     <script src="factories/fb.js"></script>
 </head>
-<body ng-app="sampleApp" ng-controller="Controller2">
+<body ng-app="sampleApp">
 
     <div ng-view></div>
 
