--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script type="text/javascript"
-            accesskey=""src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0Zk0qkY2wof0ezmfB8TM3jzr08NKJ8ek&sensor=false">
+            accesskey=""src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0Zk0qkY2wof0ezmfB8TM3jzr08NKJ8ek">
     </script>
     <script src="components/login/logincontroller.js"></script>
     <script src="components/view2/ctrl2.js"></script>
