create REST API and Factory to handle http calls to the rest Api

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,7 @@
     <script src="components/view2/ctrl2.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/client.js"></script>
-    <script src="factories/testfactory.js"></script>
-    <script src="factories/fb.js"></script>
+    <script src="factories/restApi.js"></script>
 </head>
 <body ng-app="sampleApp">
 
