--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     </script>
     <script src="components/login/logincontroller.js"></script>
     <script src="components/view2/ctrl2.js"></script>
+    <script src="components/home/home.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/client.js"></script>
     <script src="factories/restApi.js"></script>
