--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>KatchUpp</title>
-    <base href="/view1">
+    <base href="/">
 
     <link rel="stylesheet" href="build/css/main.min.css">
     <script src="libs/angular/angular.min.js"></script>
@@ -12,7 +12,7 @@
             accesskey=""src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0Zk0qkY2wof0ezmfB8TM3jzr08NKJ8ek">
     </script>
     <script src="components/login/logincontroller.js"></script>
-    <script src="components/view2/ctrl2.js"></script>
+    <script src="components/location/location.js"></script>
     <script src="components/home/home.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/client.js"></script>
