geolocation solved with promise

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <script src="js/routes.js"></script>
     <script src="js/client.js"></script>
     <script src="factories/restApi.js"></script>
+    <script src="factories/geolocationApi.js"></script>
 </head>
 <body ng-app="sampleApp">
 
